[gd_scene load_steps=7 format=2]

[ext_resource path="res://scripts/QuestMarker.gd" type="Script" id=1]
[ext_resource path="res://assets/icons/marker_objective.png" type="Texture" id=2]
[ext_resource path="res://assets/fonts/main_font.tres" type="DynamicFont" id=3]

[sub_resource type="CircleShape2D" id=1]
radius = 20.0

[sub_resource type="Animation" id=2]
length = 2.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1, 2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0.5 ), Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1, 2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 0.9, 0.9 ), Vector2( 1, 1 ) ]
}

[sub_resource type="Animation" id=3]
length = 1.5
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.7, 1.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0.7 ), Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.7, 1.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1.5, 1.5 ), Vector2( 1.3, 1.3 ), Vector2( 1.5, 1.5 ) ]
}

[node name="QuestMarker" type="Node2D"]
z_index = 10
script = ExtResource( 1 )

[node name="Sprite" type="Sprite"]
texture = ExtResource( 2 )

[node name="Label" type="Label"]
visible = false
margin_left = -150.0
margin_top = -50.0
margin_right = 150.0
margin_bottom = -30.0
custom_fonts/font = ExtResource( 3 )
text = "Descripci√≥n del objetivo"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DistanceLabel" type="Label"]
visible = false
margin_left = -50.0
margin_top = 20.0
margin_right = 50.0
margin_bottom = 40.0
custom_fonts/font = ExtResource( 3 )
text = "100m"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Area2D" type="Area2D"]

[node name="CollisionShape2D" type="CollisionShape2D"]
shape = SubResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer"]
anims/pulse = SubResource( 2 )
anims/tracked_pulse = SubResource( 3 )

[connection signal="input_event" from="Area2D" to="." method="_on_Area2D_input_event"]
[connection signal="mouse_entered" from="Area2D" to="." method="_on_Area2D_mouse_entered"]
[connection signal="mouse_exited" from="Area2D" to="." method="_on_Area2D_mouse_exited"]